--- a/pages/calls.mdx
+++ b/pages/calls.mdx
@@ -17,7 +17,7 @@ When setting up a Pearl, you have the flexibility to define various aspects of t
   <Card
     title="Create Pearl"
     icon="wand-magic"
-    href="/docs/create_pearl"
+    href="/pages/create_pearl"
   >
     Learn how to create and configure a Pearl to define call flows and data collection.
   </Card>
