--- a/pages/create_pearl.mdx
+++ b/pages/create_pearl.mdx
@@ -40,6 +40,7 @@ Choose the type of use case for your Pearl:
 
 For more details on actions, refer to the [Actions](/pages/action) page.
 
+<a id="pearl-name"></a>   
 #### Step 5: Pearl Name
 
 1. **Name of the Pearl**: Assign a friendly name to your Pearl for easy retrieval.
