--- a/pages/twilio_integration.mdx
+++ b/pages/twilio_integration.mdx
@@ -31,7 +31,7 @@ Integrating your Twilio account with NLPearl.AI offers a flexible and powerful w
 
 ### Twilio Configuration
 
-Once you've connected your Twilio account to NLPearl, you will need to disable HTTP Basic Authentication for media access to ensure proper usage of all our functionalities. To do so, go to the "Twilio Dashboard," click on "Voice" under the left menu, select "General," scroll down to "HTTP Basic Authentication for media access," and click on "Disable."
+Once you've connected your Twilio account to NLPearl, you will need to disable HTTP Basic Authentication for media access to ensure proper usage of all our functionalities. To do so, go to the "Twilio Dashboard," click on "Voice" under the left menu, select "General," scroll down to "HTTP Basic Authentication for media access," and click on "Disable." Then click on "Save".
 
 <img
   className="block"
