--- a/pages/api_action.mdx
+++ b/pages/api_action.mdx
@@ -89,6 +89,6 @@ You can add several API actions to a single Pearl, allowing for complex interact
     icon="puzzle-piece"
     href="/pages/variables"
   >
-    Learn how to use variables for your.
+    Learn how to use variables to expand the functionality of Pearl.
   </Card>
 </CardGroup>
