--- a/pages/email_action.mdx
+++ b/pages/email_action.mdx
@@ -42,7 +42,7 @@ During the creation of a Pearl, you can easily activate and configure the "Send 
     icon="puzzle-piece"
     href="/pages/variables"
   >
-    Learn how to use variables for your.
+    Learn how to use variables to expand the functionality of Pearl.
   </Card>
 </CardGroup>
 
