Phone settings and outbounds

--- a/pages/email_action.mdx
+++ b/pages/email_action.mdx
@@ -34,7 +34,7 @@ During the creation of a Pearl, you can easily activate and configure the "Send 
 
 - **Email Content**: This is the body of your email. Write any message you want to be sent out, and again, you can use variables to customize the content. For example, include specific details gathered during the conversation, such as a price quote or meeting time.
 
-- **When to Take Action**: This field is crucial. Here, you describe the conditions under which you want the agent to send the email. For example, "Send an email when the customer agrees to receive more information" or "Send a confirmation email when the prospect is ready to finalize the deal." Your agent will automatically send the email when these conditions are met during the discussion.
+- **When to Trigger the Action**: This field is crucial. Here, you describe the conditions under which you want the agent to send the email. For example, "Send an email when the customer agrees to receive more information" or "Send a confirmation email when the prospect is ready to finalize the deal." Your agent will automatically send the email when these conditions are met during the discussion.
 
 <CardGroup cols={1}>
   <Card
