--- a/pages/outbound.mdx
+++ b/pages/outbound.mdx
@@ -9,11 +9,9 @@ import { CardGroup, Card } from '@theme';
 
 NLPearl.AI provides robust features to manage outbound campaigns efficiently. Using the Pearl flows you have created, you can set up outbound calls to engage with your leads according to a predefined schedule.
 
+### What are Outbound Campaigns?
 
-
-### What are Outbound ?
-
-Outbound Campaigns enable your AI agents to make outgoing calls to a list of leads. These calls follow the conversational logic defined in your Pearl, ensuring consistent and effective communication with your potential clients.
+Outbound campaigns enable your AI agents to make outgoing calls to a list of leads. These calls follow the conversational logic defined in your Pearl, ensuring consistent and effective communication with your potential clients.
 
 ### Steps to Create an Outbound Campaign
 
@@ -23,11 +21,40 @@ Outbound Campaigns enable your AI agents to make outgoing calls to a list of lea
 
 3. **Schedule Calls**: Define the schedule for when the AI agents will make the outbound calls. You can specify dates, times, and frequency to suit your campaign needs.
 
-3. **Configure Outbound Settings**: Set up your outbound parameters, such as:
-   - **Number of Agents**: Specify the number of agents that will handle calls simultaneously.
-   - **Default TimeZone**: The default timezone will be the timezone of all the leads you enter if you don't specify their timezone.
-   - **Affect a Phone Number**: Outbound activities do not require you to assign a specific phone number, but it can be done. If you do not assign a phone number, the default NLPearl phone number will be used for calls.
+4. **Configure Outbound Settings**: Set up your outbound parameters, such as:
 
+   - **Number of Agents**: Specify the number of agents that will handle calls simultaneously.
+
+   - **Default Time Zone**: The default time zone will be applied to all leads you enter if you don't specify their individual time zones.
+
+   - **Assign a Phone Number**: When you create an outbound campaign, you are required to assign a phone number from which the calls will originate. 
+   You can choose from your own phone numbers or select from the list of default phone numbers provided by the platform. 
+   See Bellow how choosing a phone number can impact the *country code* of your outbound campaign.
+
+   - **Campaign Budget**: Define the budget for your campaign. Once the budget is reached, Pearl will stop making calls for that campaign.
+
+   - **Call Webhook**: A call webhook is triggered at key points during the call lifecycle, such as when the call is initiated and when it ends.
+	You receive an object similar to the one returned by the [Get Calls](/api-reference/call/get-call) endpoint. This includes details like call duration, outcome, and any data collected during the call.
+  
+   - **Lead Webhook**: A lead webhook is triggered every time a specific lead changes status, at the beginning of the call and at the end of the call.
+	You receive an object similar to the one returned by the [Get Leads](/api-reference/outbound/get-lead) endpoint. This includes all relevant information about the lead and its current status.
+	Use this webhook to update your CRM or lead management system in real-time, ensuring that you have the most up-to-date information on lead interactions.
+
+
+### Understanding Country Codes
+
+Understanding how the country code affects your campaign is crucial:
+
+- **Single Country Code per Campaign**: Each outbound campaign is restricted to one country code. This means you can only call leads with phone numbers from the same country.
+
+- **Setting and Managing the Country Code**: The country code for your outbound campaign is automatically set based on the phone number you assign during creation. The phone number you select determines the country code for the campaign. Once assigned, the country code matches the phone number's country code and **cannot be changed** for that campaign. You will only be able to add leads with phone numbers matching this country code.
+
+  - **Changing Phone Numbers**: You can change the assigned phone number **within the same country code**. If you need to assign a phone number from a different country code, you will need to create a **new outbound campaign**.
+
+- **Adding Leads**: You can only add leads whose phone numbers match the campaign's country code.
+
+- **Creating Multiple Campaigns**: If you need to operate across multiple country codes, you should create separate outbound campaigns for each country code.
+- As our platform currently only offers US phone numbers, please refer to the Phone Numbers tab to explore the options available if you need to reach phone numbers from other country codes.
 
 <CardGroup cols={2}>
   <Card
@@ -45,6 +72,7 @@ Outbound Campaigns enable your AI agents to make outgoing calls to a list of lea
     Learn how to purchase and manage phone numbers, and configure them for your NLPearl.AI activities.
   </Card>
 </CardGroup>
+
 ### Managing Your Outbound Campaigns
 
 Once your campaign is set up, NLPearl.AI handles the outbound calls autonomously, following the Pearl flow you created. The platform allows you to monitor the progress and performance of your campaigns in real-time.
@@ -56,14 +84,19 @@ Once your campaign is set up, NLPearl.AI handles the outbound calls autonomously
 
 ### Using the API for Outbound Campaigns
 
-You can also handle your outbound campaigns using the NLPearl.AI API. This allows for more dynamic and flexible management of calling leads. For detailed information, refer to the [Outbound/API](api-reference/outbound/get-outbounds) documentation.
+You can also handle your outbound campaigns using the NLPearl.AI API. This allows for more dynamic and flexible management of calling leads. 
+For detailed information, refer to the [Outbound API Documentation](/api-reference/outbound/get-outbounds).
 
 <CardGroup cols={1}>
   <Card
     title="Outbound API"
     icon="network-wired"
-    href="/pages/outbound_api"
+    href="/api-reference/outbound/get-outbounds"
   >
     Learn how to manage your outbound campaigns using the API for dynamic and flexible lead calling.
   </Card>
 </CardGroup>
+
+
+
+
