--- a/pages/sms_action.mdx
+++ b/pages/sms_action.mdx
@@ -31,7 +31,7 @@ To activate and configure the "Send SMS" action within a Pearl, follow these ste
 - **SMS Content**: 
   - **Compose Your Message**: Write the SMS content that you want to be sent out. You can include links, important details, or any relevant information. Additionally, you can use variables within the SMS to personalize the message for each recipient. For example, "Hi {firstName}, your reservation at {restaurantName} is confirmed."
 
-- **When to Take Action**: 
+- **When to Trigger the Action**: 
   - **Trigger Condition**: Describe when you want the SMS to be sent. This could be immediately after a specific event occurs during the conversation. For example, "Send the SMS immediately after the table reservation is confirmed and processed."
 
 ### Example Use Cases
