--- a/pages/nlpearl_phones.mdx
+++ b/pages/nlpearl_phones.mdx
@@ -6,12 +6,12 @@ description: 'Learn how to purchase phone numbers directly from the NLPearl.AI p
 <img
 	className="block dark:hidden"
   src="/logo/NLPearlPhone.png"
-  alt="nlpearl-incon"
+  alt="Custom VoIP Icon"
   style={{ width: '50px', float: 'right', marginTop: '-130px' }}
 /><img
 	className="hidden dark:block"
   src="/logo/NLPearlPhoneBlack.png"
-  alt="nlpearl-incon"
+  alt="Custom VoIP Icon"
   style={{ width: '50px', float: 'right', marginTop: '-130px' }}
 />
 NLPearl.AI allows you to purchase phone numbers directly from our platform to support your inbound and outbound call activities. These phone numbers are billed monthly and can be managed easily within your account.
