--- a/pages/twilio_integration.mdx
+++ b/pages/twilio_integration.mdx
@@ -6,12 +6,12 @@ description: 'Learn how to integrate your Twilio account with NLPearl.AI and use
 <img
 	className="block dark:hidden"
   src="/logo/twilioicon.webp"
-  alt="twilio-icon"
+  alt="Custom VoIP Icon"
   style={{ width: '50px', float: 'right', marginTop: '-150px' }}
 /><img
 	className="hidden dark:block"
   src="/logo/twilioicon.webp"
-  alt="twilio-icon"
+  alt="Custom VoIP Icon"
   style={{ width: '50px', float: 'right', marginTop: '-150px' }}
 />
 
