--- a/pages/custom_voip.mdx
+++ b/pages/custom_voip.mdx
@@ -153,7 +153,7 @@ Once integrated:
   - If you require help with the integration process, please refer to our support resources or contact our support team for guidance.
 
 - **Explore Other Options**:
-  - If Custom VoIP Integration doesn't suit your needs, consider our [NLPearl Phone Numbers](/docs/nlpearl-phone-numbers) or [Twilio Integration](/docs/twilio-integration) options.
+  - If Custom VoIP Integration doesn't suit your needs, consider our [NLPearl Phone Numbers](/pages/nlpearl_phones) or [Twilio Integration](/pages/twilio_integration) options.
 
 ---
 
