--- a/pages/nlpearl_phones.mdx
+++ b/pages/nlpearl_phones.mdx
@@ -119,8 +119,8 @@ If you no longer need a phone number, you can schedule it for deletion:
 ### Next Steps
 
 - **Need Phone Numbers from Other Countries?**
-  - Explore our [Twilio Integration](/docs/twilio-integration) to access a broader range of international phone numbers.
-  - Consider the [Custom VoIP Integration](/docs/custom-voip-integration) if you have specific VoIP services you wish to use.
+  - Explore our [Twilio Integration](/pages/twilio_integration) to access a broader range of international phone numbers.
+  - Consider the [Custom VoIP Integration](/pages/custom_voip) if you have specific VoIP services you wish to use.
 
 
 
