--- a/pages/phone_overview.mdx
+++ b/pages/phone_overview.mdx
@@ -24,17 +24,17 @@ NLPearl.AI offers you three main ways to acquire or integrate phone numbers into
 #### 1. NLPearl Phone Numbers
 NLPearl provides an easy solution to purchase phone numbers directly from the platform. This option is ideal if you need a quick and straightforward way to acquire phone numbers, currently available for the United States. By purchasing a phone number from NLPearl, you can easily manage and assign it to your inbound and outbound campaigns.
 
-For more details, visit the [NLPearl Phone Numbers](pages/nlpearl-phone-numbers) page.
+For more details, visit the [NLPearl Phone Numbers](/pages/nlpearl_phones) page.
 
 #### 2. Twilio Integration
 If you already have a Twilio account, you can integrate it directly with NLPearl.AI and import the phone numbers you have from Twilio. This option allows for more flexibility as Twilio provides phone numbers for multiple countries, enabling you to extend your campaigns to a broader audience.
 
-Visit [Twilio Integration](pages/twilio-integration) for details on how to import and manage your Twilio phone numbers.
+Visit [Twilio Integration](/pages/twilio_integration) for details on how to import and manage your Twilio phone numbers.
 
 #### 3. Custom VoIP Integration
 For businesses with custom VoIP providers, NLPearl.AI supports the integration of your own VoIP services. This gives you full control over the phone numbers and configurations, making it ideal for those with specific telecom setups.
 
-To learn more about integrating your own VoIP service, check out [Custom VoIP Integration](pages/custom-voip-integration).
+To learn more about integrating your own VoIP service, check out [Custom VoIP Integration](/pages/custom_voip).
 
 ### Conclusion
 
